--- a/.github/workflows/scheduling.yml
+++ b/.github/workflows/scheduling.yml
@@ -1,7 +1,7 @@
 name: crea feed RSS assemblea regionale siciiana
 
 on:
-  push:
+  #push:
   repository_dispatch:
   schedule:
 # le ore github sono -2, quindi se inserisco 5, sono le 7 di mattina italiane (con la variazione solare, legale)
