--- a/.github/workflows/scheduling.yml
+++ b/.github/workflows/scheduling.yml
@@ -22,6 +22,8 @@ jobs:
         chmod +x mlr
         chmod +x scrape
         sudo apt-get install xmlstarlet
+        sudo apt-get install jq
+        pip install yq
     - name: scarica i dati e crea feed
       env:
         SUPER_SECRET: ${{ secrets.IFTTT }}
