--- a/.github/workflows/scheduling.yml
+++ b/.github/workflows/scheduling.yml
@@ -24,7 +24,7 @@ jobs:
         sudo apt-get install xmlstarlet
         sudo apt-get install jq
         sudo apt-get install python3-dev
-        pip install yq
+        python3 -m pip install --upgrade --user yq
     - name: scarica i dati e crea feed
       env:
         SUPER_SECRET: ${{ secrets.IFTTT }}
