--- a/.github/workflows/scheduling.yml
+++ b/.github/workflows/scheduling.yml
@@ -25,6 +25,7 @@ jobs:
         sudo apt-get install jq
         sudo apt-get install python3-dev
         sudo apt-get install python3-setuptools
+        sudo apt-get install python-yaml
         python3 -m pip install --upgrade --user yq
     - name: scarica i dati e crea feed
       env:
