--- a/.github/workflows/scheduling.yml
+++ b/.github/workflows/scheduling.yml
@@ -1,7 +1,7 @@
 name: crea feed RSS assemblea regionale siciiana
 
 on:
-  push:
+  # push:
   repository_dispatch:
   schedule:
 # le ore github sono -2, quindi se inserisco 5, sono le 7 di mattina italiane (con la variazione solare, legale)
@@ -13,7 +13,7 @@ jobs:
     steps:
     - name: Utilizza l'action github checkout@v2, per automatizzare il check-out
       uses: actions/checkout@v2
-    - name: crea cartella utente bin, e copia dentro l'eseguibile di miller e installa xmlstarlet
+    - name: crea cartella utente bin, copia dentro l'eseguibile di miller e scrape, installa xmlstarlet, jq e xq
       run: |-
         mkdir -p ~/bin
         cp bin/mlr ~/bin
