--- a/.github/workflows/scheduling.yml
+++ b/.github/workflows/scheduling.yml
@@ -1,7 +1,7 @@
 name: crea feed RSS assemblea regionale siciiana
 
 on:
-  push:
+#  push:
   repository_dispatch:
   schedule:
     - cron:  '00 */1 * * *'
@@ -12,7 +12,7 @@ jobs:
     steps:
     - name: Utilizza l'action github checkout@v2, per automatizzare il check-out
       uses: actions/checkout@v2
-    - name: crea cartella utente bin, copia dentro l'eseguibile di miller e scrape, installa xmlstarlet e xq
+    - name: crea cartella utente bin, copia dentro l'eseguibile di miller e scrape, installa xmlstarlet, gooodtables e yq
       run: |-
         mkdir -p ~/bin
         cp bin/mlr ~/bin
