--- a/.github/workflows/scheduling.yml
+++ b/.github/workflows/scheduling.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
     - name: Utilizza l'action github checkout@v2, per automatizzare il check-out
       uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
     - name: crea cartella utente bin, copia dentro l'eseguibile di miller e scrape, installa xmlstarlet, gooodtables e yq
       run: |-
         mkdir -p ~/bin
