--- a/.github/workflows/scheduling.yml
+++ b/.github/workflows/scheduling.yml
@@ -23,7 +23,7 @@ jobs:
         chmod +x mlr
         chmod +x scrape
         sudo apt-get install xmlstarlet
-        sudo pip install yq goodtables
+#        sudo pip install yq goodtables
     - name: scarica i dati e crea feed
       env:
         SUPER_SECRET: ${{ secrets.IFTTT }}
